# fastapi-example

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
