[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
]

[project.optional-dependencies]
dev = [
    "ruff == 0.11.7",
    "pytest == 8.3.5",
    "pytest-cov",
    "unittest-xml-reporting == 3.2.0",
]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "D",   # pydocstyle
]
line-length = 100
ignore = ["D203", "D213", "ANN101"]
exclude = ["__init__.py"]

[tool.ruff.per-file-ignores]
"test*" = ["D", "ANN"]